[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
memory-profiler = "^0.61.0"
matplotlib = "^3.6.2"
scalene = "^1.5.16"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
