[tool.poetry]
authors = ["Oleksandr Vodolazskyi <oleksandr.vodolazskyi@gmail.com>"]
description = ""
name = "advent2022"
version = "0.1.0"

[tool.poetry.dependencies]
matplotlib = "^3.6.2"
memory-profiler = "^0.61.0"
python = "^3.10"
scalene = "^1.5.16"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
ipython = "^8.7.0"
ruff = "^0.0.183"
ipykernel = "^6.19.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.ruff]
unfixable = ["F401"]
